--- a/MyStock/App.xaml
+++ b/MyStock/App.xaml
@@ -8,7 +8,7 @@
             <ResourceDictionary.MergedDictionaries>
                 <materialDesign:MahAppsBundledTheme BaseTheme="Inherit"
                                                     PrimaryColor="DeepPurple"
-                                                    SecondaryColor="Orange" />
+                                                    SecondaryColor="LightGreen" />
 
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
