--- a/MyStock/Windows/LoginWindow.xaml
+++ b/MyStock/Windows/LoginWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="MyStock.Windows.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:assets="clr-namespace:Assets"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:langAsset="clr-namespace:MyStock.Assets.Lang"
         xmlns:local="clr-namespace:MyStock.Windows"
         xmlns:localControls="clr-namespace:MyStock.Controls"
         xmlns:localConvertors="clr-namespace:MyStock.Converters"
@@ -68,14 +68,14 @@
                                HorizontalAlignment="Center"
                                FontSize="28"
                                FontWeight="Bold"
-                               Text="{x:Static assets:Lang.WelcomeBack}"
+                               Text="{x:Static langAsset:Lang.WelcomeBack}"
                                TextAlignment="Center"
                                TextWrapping="Wrap" />
 
                     <TextBox x:Name="txtUsername"
                              Width="300"
                              Margin="0,30,0,0"
-                             materialDesign:HintAssist.Hint="{x:Static assets:Lang.EnterUsername}"
+                             materialDesign:HintAssist.Hint="{x:Static langAsset:Lang.EnterUsername}"
                              BorderBrush="{DynamicResource MaterialDesignDivider}"
                              BorderThickness="2"
                              FontSize="18"
@@ -84,7 +84,7 @@
                     <PasswordBox x:Name="txtPassword"
                                  Width="300"
                                  Margin="0,20,0,0"
-                                 materialDesign:HintAssist.Hint="{x:Static assets:Lang.EnterPassword}"
+                                 materialDesign:HintAssist.Hint="{x:Static langAsset:Lang.EnterPassword}"
                                  BorderBrush="{DynamicResource MaterialDesignDivider}"
                                  BorderThickness="2"
                                  FontSize="18"
@@ -97,7 +97,7 @@
                             materialDesign:ButtonAssist.CornerRadius="10"
                             materialDesign:ShadowAssist.ShadowDepth="Depth0"
                             Click="loginBtn_Click"
-                            Content="{Binding Source={x:Static assets:Lang.Login}, Converter={StaticResource StringToUpperConverter}}"
+                            Content="{Binding Source={x:Static langAsset:Lang.Login}, Converter={StaticResource StringToUpperConverter}}"
                             FontSize="18"
                             Style="{StaticResource MaterialDesignFlatDarkBgButton}" />
 
