--- a/MyStock/Pages/Uoms/UomPage.xaml
+++ b/MyStock/Pages/Uoms/UomPage.xaml
@@ -1,14 +1,18 @@
-﻿<UserControl x:Class="MyStock.Dialogs.UomDialog"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:langAsset="clr-namespace:MyStock.Application.Assets.Lang; assembly=MyStock.Application"
-             xmlns:materialDesign="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             Width="400"
-             d:DesignHeight="450"
-             d:DesignWidth="800"
-             mc:Ignorable="d">
+﻿<pages:EntityPage x:Class="MyStock.Pages.Uoms.UomPage"
+                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                  xmlns:domain="clr-namespace:MyStock.Domain;assembly=MyStock.Domain"
+                  xmlns:langAsset="clr-namespace:MyStock.Application.Assets.Lang;assembly=MyStock.Application"
+                  xmlns:local="clr-namespace:MyStock.Pages.Uoms"
+                  xmlns:materialDesign="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
+                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                  xmlns:pages="clr-namespace:MyStock.Pages"
+                  xmlns:viewModel="clr-namespace:MyStock.Application.Uoms;assembly=MyStock.Application"
+                  d:DesignHeight="450"
+                  d:DesignWidth="800"
+                  x:TypeArguments="viewModel:UomViewModel"
+                  mc:Ignorable="d">
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
@@ -17,10 +21,10 @@
             <RowDefinition Height="100" />
             <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
-        <StackPanel>
-            <TextBlock x:Name="ErrorMessages"
-                       Style="{StaticResource MaterialDesignBody1TextBlock}"
-                       Visibility="Collapsed" />
+        <StackPanel HorizontalAlignment="Right">
+            <Button Command="{Binding Close}" Style="{StaticResource MaterialDesignIconForegroundButton}">
+                <materialDesign:PackIcon Kind="Close" />
+            </Button>
         </StackPanel>
         <TextBox Grid.Row="1"
                  Margin="0,10"
@@ -39,7 +43,6 @@
                  Margin="0,10"
                  materialDesign:HintAssist.Hint="{x:Static langAsset:Lang.Description}"
                  materialDesign:TextFieldAssist.HasClearButton="True"
-                 AcceptsReturn="True"
                  Style="{StaticResource MaterialDesignOutlinedTextBox}"
                  Text="{Binding Description}"
                  TextWrapping="Wrap" />
@@ -48,12 +51,9 @@
                     HorizontalAlignment="Right"
                     Orientation="Horizontal">
             <Button Margin="10,0"
-                    Click="Save_Button_Click"
+                    Command="{Binding SaveChange}"
                     Content="{x:Static langAsset:Lang.Save}"
                     Style="{StaticResource MaterialDesignRaisedDarkButton}" />
-            <Button Click="Cancel_Button_Click"
-                    Content="{x:Static langAsset:Lang.Cancel}"
-                    Style="{StaticResource MaterialDesignFlatButton}" />
         </StackPanel>
     </Grid>
-</UserControl>
+</pages:EntityPage>
