--- a/MyStock/Windows/LoginWindow.xaml
+++ b/MyStock/Windows/LoginWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:langAsset="clr-namespace:MyStock.Assets.Lang"
+        xmlns:langAsset="clr-namespace:MyStock.Application.Assets.Lang;assembly=MyStock.Application"
         xmlns:local="clr-namespace:MyStock.Windows"
         xmlns:localControls="clr-namespace:MyStock.Controls"
         xmlns:localConvertors="clr-namespace:MyStock.Converters"
