--- a/MyStock/Pages/Uoms/UomPage.xaml
+++ b/MyStock/Pages/Uoms/UomPage.xaml
@@ -9,11 +9,13 @@
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                   xmlns:pages="clr-namespace:MyStock.Pages"
                   xmlns:viewModel="clr-namespace:MyStock.Application.Uoms;assembly=MyStock.Application"
+                  MinWidth="300"
+                  MaxWidth="400"
                   d:DesignHeight="450"
                   d:DesignWidth="800"
                   x:TypeArguments="viewModel:UomViewModel"
                   mc:Ignorable="d">
-    <Grid Margin="20">
+    <Grid Margin="20,5,10,10">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto" />
             <RowDefinition Height="60" />
@@ -28,20 +30,20 @@
         </StackPanel>
         <TextBox Grid.Row="1"
                  Margin="0,10"
-                 materialDesign:HintAssist.Hint="{x:Static langAsset:Lang.Name}"
+                 materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Name}"
                  materialDesign:TextFieldAssist.HasClearButton="True"
-                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                 Style="{StaticResource FloatingHintTextBox}"
                  Text="{Binding Name}" />
         <TextBox Grid.Row="2"
                  Margin="0,10"
-                 materialDesign:HintAssist.Hint="{x:Static langAsset:Lang.UomCode}"
+                 materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.UomCode}"
                  materialDesign:TextFieldAssist.HasClearButton="True"
-                 Style="{StaticResource MaterialDesignFloatingHintTextBox}"
+                 Style="{StaticResource FloatingHintTextBox}"
                  Text="{Binding Code}" />
 
         <TextBox Grid.Row="3"
                  Margin="0,10"
-                 materialDesign:HintAssist.Hint="{x:Static langAsset:Lang.Description}"
+                 materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Description}"
                  materialDesign:TextFieldAssist.HasClearButton="True"
                  Style="{StaticResource MaterialDesignOutlinedTextBox}"
                  Text="{Binding Description}"
@@ -50,9 +52,8 @@
         <StackPanel Grid.Row="4"
                     HorizontalAlignment="Right"
                     Orientation="Horizontal">
-            <Button Margin="10,0"
-                    Command="{Binding SaveChange}"
-                    Content="{x:Static langAsset:Lang.Save}"
+            <Button Command="{Binding SaveChange}"
+                    Content="{x:Static langAsset:Translations.Save}"
                     Style="{StaticResource MaterialDesignRaisedDarkButton}" />
         </StackPanel>
     </Grid>
