--- a/MyStock/Pages/Products/ProductPage.xaml
+++ b/MyStock/Pages/Products/ProductPage.xaml
@@ -5,81 +5,174 @@
                   xmlns:domain="clr-namespace:MyStock.Domain;assembly=MyStock.Domain"
                   xmlns:langAsset="clr-namespace:MyStock.Application.Assets.Lang;assembly=MyStock.Application"
                   xmlns:local="clr-namespace:MyStock.Pages.Uoms"
+                  xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                   xmlns:materialDesign="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                   xmlns:pages="clr-namespace:MyStock.Pages"
                   xmlns:viewModel="clr-namespace:MyStock.Application.Products;assembly=MyStock.Application"
-                  MinWidth="300"
-                  MaxWidth="400"
+                  MinWidth="400"
+                  MinHeight="400"
                   d:DesignHeight="500"
-                  d:DesignWidth="400"
+                  d:DesignWidth="650"
                   x:TypeArguments="viewModel:ProductViewModel"
                   mc:Ignorable="d">
-    <Grid Margin="20,5,10,10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition Height="40" />
-            <RowDefinition Height="60" />
-            <RowDefinition Height="40" />
-            <RowDefinition Height="60" />
-            <RowDefinition Height="40" />
-            <RowDefinition Height="60" />
-            <RowDefinition Height="40" />
-            <RowDefinition Height="auto" />
-        </Grid.RowDefinitions>
-        <StackPanel HorizontalAlignment="Right">
-            <Button Command="{Binding Close}" Style="{StaticResource MaterialDesignIconForegroundButton}">
-                <materialDesign:PackIcon Kind="Close" />
-            </Button>
-        </StackPanel>
+    <Grid>
+        <materialDesign:Card>
+            <TabControl materialDesign:NavigationRailAssist.ShowSelectionBackground="True"
+                        SnapsToDevicePixels="True"
+                        Style="{StaticResource MaterialDesignNavigatilRailTabControl}"
+                        TabStripPlacement="Left">
+                <TabItem>
+                    <TabItem.Header>
+                        <StackPanel Width="auto" Height="auto">
+                            <materialDesign:PackIcon Width="24"
+                                                     Height="24"
+                                                     HorizontalAlignment="Center"
+                                                     Kind="PackageVariant" />
+                            <TextBlock HorizontalAlignment="Center" Text="Общее" />
+                        </StackPanel>
+                    </TabItem.Header>
 
-        <ComboBox Grid.Row="1"
-                  materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Category}"
-                  DisplayMemberPath="Name"
-                  ItemsSource="{Binding AvailableCategories}"
-                  SelectedItem="{Binding Category}" />
+                    <Grid Margin="20,5,10,10">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="60" />
+                            <RowDefinition Height="60" />
+                            <RowDefinition Height="60" />
+                            <RowDefinition Height="60" />
+                            <RowDefinition Height="60" />
+                            <RowDefinition Height="60" />
+                            <RowDefinition Height="60" />
+                            <RowDefinition Height="auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel HorizontalAlignment="Right">
+                            <Button Command="{Binding Close}" Style="{StaticResource MaterialDesignIconForegroundButton}">
+                                <materialDesign:PackIcon Kind="Close" />
+                            </Button>
+                        </StackPanel>
 
-        <TextBox Grid.Row="2"
-                 Margin="0,10"
-                 materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Description}"
-                 materialDesign:TextFieldAssist.HasClearButton="True"
-                 Style="{StaticResource FloatingHintTextBox}"
-                 Text="{Binding Description}" />
+                        <ComboBox Grid.Row="1"
+                                  Margin="0,10"
+                                  VerticalAlignment="Bottom"
+                                  materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Category}"
+                                  DisplayMemberPath="Name"
+                                  ItemsSource="{Binding AvailableCategories}"
+                                  SelectedItem="{Binding Category}" />
 
-        <ComboBox Grid.Row="3"
-                  materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.UOM}"
-                  DisplayMemberPath="Name"
-                  ItemsSource="{Binding AvailableUoms}"
-                  SelectedItem="{Binding Uom}" />
+                        <TextBox Grid.Row="2"
+                                 Margin="0,10"
+                                 materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Description}"
+                                 materialDesign:TextFieldAssist.HasClearButton="True"
+                                 Style="{StaticResource FloatingHintTextBox}"
+                                 Text="{Binding Description}" />
 
-        <TextBox Grid.Row="4"
-                 Margin="0,10"
-                 materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Code}"
-                 materialDesign:TextFieldAssist.HasClearButton="True"
-                 Style="{StaticResource FloatingHintTextBox}"
-                 Text="{Binding Code}" />
+                        <ComboBox Grid.Row="3"
+                                  Margin="0,10"
+                                  VerticalAlignment="Bottom"
+                                  materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.UOM}"
+                                  DisplayMemberPath="Name"
+                                  ItemsSource="{Binding AvailableUoms}"
+                                  SelectedItem="{Binding Uom}" />
 
-        <TextBox Grid.Row="5"
-                 materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Cost}"
-                 materialDesign:TextFieldAssist.HasClearButton="True"
-                 materialDesign:TextFieldAssist.PrefixText="$ "
-                 Style="{StaticResource FloatingHintTextBox}"
-                 Text="{Binding Cost}" />
-        <TextBox Grid.Row="6"
-                 Margin="0,10"
-                 materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Price}"
-                 materialDesign:TextFieldAssist.HasClearButton="True"
-                 materialDesign:TextFieldAssist.PrefixText="$ "
-                 Style="{StaticResource FloatingHintTextBox}"
-                 Text="{Binding Price}" />
-        <CheckBox Grid.Row="7"
-                  Content="{x:Static langAsset:Translations.Active}"
-                  IsChecked="{Binding IsActive}" />
+                        <TextBox Grid.Row="4"
+                                 Margin="0,10"
+                                 materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Code}"
+                                 materialDesign:TextFieldAssist.HasClearButton="True"
+                                 Style="{StaticResource FloatingHintTextBox}"
+                                 Text="{Binding Code}" />
 
-        <Button Grid.Row="8"
-                HorizontalAlignment="Right"
-                Command="{Binding SaveChange}"
-                Content="{x:Static langAsset:Translations.Save}"
-                Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                        <TextBox Grid.Row="5"
+                                 Margin="0,10"
+                                 VerticalAlignment="Bottom"
+                                 materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Cost}"
+                                 materialDesign:TextFieldAssist.HasClearButton="True"
+                                 materialDesign:TextFieldAssist.PrefixText="$ "
+                                 Style="{StaticResource FloatingHintTextBox}"
+                                 Text="{Binding Cost}" />
+
+                        <!--<mah:NumericUpDown Grid.Row="5"
+                                           Margin="0,10"
+                                           VerticalAlignment="Bottom"
+                                           materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Cost}"
+                                           materialDesign:TextFieldAssist.PrefixText="$ "
+                                           TextAlignment="Left"
+                                           Value="{Binding Cost}" />-->
+
+                        <TextBox Grid.Row="6"
+                                 Margin="0,10"
+                                 VerticalAlignment="Bottom"
+                                 materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Price}"
+                                 materialDesign:TextFieldAssist.HasClearButton="True"
+                                 materialDesign:TextFieldAssist.PrefixText="$ "
+                                 Style="{StaticResource FloatingHintTextBox}"
+                                 Text="{Binding Price}" />
+                        <CheckBox Grid.Row="7"
+                                  Content="{x:Static langAsset:Translations.Active}"
+                                  IsChecked="{Binding IsActive}" />
+
+                        <Button Grid.Row="8"
+                                HorizontalAlignment="Right"
+                                Command="{Binding SaveChange}"
+                                Content="{x:Static langAsset:Translations.Save}"
+                                Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+                    </Grid>
+                </TabItem>
+                <TabItem>
+                    <TabItem.Header>
+                        <StackPanel Width="auto" Height="auto">
+                            <materialDesign:PackIcon Width="24"
+                                                     Height="24"
+                                                     HorizontalAlignment="Center"
+                                                     Kind="Stocking" />
+                            <TextBlock HorizontalAlignment="Center"
+                                       Text="{x:Static langAsset:Translations.StockLevel}"
+                                       TextWrapping="Wrap" />
+                        </StackPanel>
+                    </TabItem.Header>
+                    <Grid Margin="20,5,10,10">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto" />
+                            <RowDefinition Height="*" />
+                            <RowDefinition Height="auto" />
+                        </Grid.RowDefinitions>
+                        <StackPanel HorizontalAlignment="Right">
+                            <Button Command="{Binding Close}" Style="{StaticResource MaterialDesignIconForegroundButton}">
+                                <materialDesign:PackIcon Kind="Close" />
+                            </Button>
+                        </StackPanel>
+                        <DataGrid Grid.Row="1"
+                                  AutoGenerateColumns="False"
+                                  CanUserAddRows="False"
+                                  CanUserDeleteRows="False"
+                                  ItemsSource="{Binding StockLevels}">
+                            <DataGrid.Columns>
+                                <DataGridTextColumn Binding="{Binding Entity.Warehouse.Name}"
+                                                    Header="{x:Static langAsset:Translations.Warehouse}"
+                                                    IsReadOnly="True" />
+                                <materialDesign:DataGridTextColumn Binding="{Binding MaxQuantity, UpdateSourceTrigger=PropertyChanged}"
+                                                                   EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}"
+                                                                   ElementStyle="{StaticResource MaterialDesignDataGridTextColumnStyle}"
+                                                                   Header="{x:Static langAsset:Translations.MaxQuantity}"
+                                                                   IsReadOnly="False" />
+                                <materialDesign:DataGridTextColumn Binding="{Binding MinQuantity, UpdateSourceTrigger=PropertyChanged}"
+                                                                   EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}"
+                                                                   ElementStyle="{StaticResource MaterialDesignDataGridTextColumnStyle}"
+                                                                   Header="{x:Static langAsset:Translations.MinQuantity}"
+                                                                   IsReadOnly="False" />
+                                <DataGridTextColumn Binding="{Binding NetQuantity}"
+                                                    Header="{x:Static langAsset:Translations.NetQuantity}"
+                                                    IsReadOnly="True" />
+                            </DataGrid.Columns>
+                        </DataGrid>
+                        <Button Grid.Row="2"
+                                HorizontalAlignment="Right"
+                                Command="{Binding SaveChange}"
+                                Content="{x:Static langAsset:Translations.Save}"
+                                Style="{StaticResource MaterialDesignRaisedDarkButton}" />
+
+                    </Grid>
+                </TabItem>
+            </TabControl>
+        </materialDesign:Card>
     </Grid>
 </pages:EntityPage>
