--- a/MyStock/Pages/Products/ProductPage.xaml
+++ b/MyStock/Pages/Products/ProductPage.xaml
@@ -2,17 +2,15 @@
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-                  xmlns:domain="clr-namespace:MyStock.Domain;assembly=MyStock.Domain"
+                  xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                   xmlns:langAsset="clr-namespace:MyStock.Application.Assets.Lang;assembly=MyStock.Application"
-                  xmlns:local="clr-namespace:MyStock.Pages.Uoms"
-                  xmlns:mah="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
                   xmlns:materialDesign="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                   xmlns:pages="clr-namespace:MyStock.Pages"
                   xmlns:viewModel="clr-namespace:MyStock.Application.Products;assembly=MyStock.Application"
                   MinWidth="400"
                   MinHeight="400"
-                  d:DesignHeight="500"
+                  d:DesignHeight="550"
                   d:DesignWidth="650"
                   x:TypeArguments="viewModel:ProductViewModel"
                   mc:Ignorable="d">
@@ -25,14 +23,13 @@
                 <TabItem>
                     <TabItem.Header>
                         <StackPanel Width="auto" Height="auto">
-                            <materialDesign:PackIcon Width="24"
-                                                     Height="24"
-                                                     HorizontalAlignment="Center"
-                                                     Kind="PackageVariant" />
+                            <iconPacks:PackIconMaterial Width="24"
+                                                        Height="24"
+                                                        HorizontalAlignment="Center"
+                                                        Kind="PackageVariant" />
                             <TextBlock HorizontalAlignment="Center" Text="Общее" />
                         </StackPanel>
                     </TabItem.Header>
-
                     <Grid Margin="20,5,10,10">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="auto" />
@@ -120,10 +117,10 @@
                 <TabItem>
                     <TabItem.Header>
                         <StackPanel Width="auto" Height="auto">
-                            <materialDesign:PackIcon Width="24"
-                                                     Height="24"
-                                                     HorizontalAlignment="Center"
-                                                     Kind="Stocking" />
+                            <iconPacks:PackIconOcticons Width="24"
+                                                        Height="24"
+                                                        HorizontalAlignment="Center"
+                                                        Kind="Settings" />
                             <TextBlock HorizontalAlignment="Center"
                                        Text="{x:Static langAsset:Translations.StockLevel}"
                                        TextWrapping="Wrap" />
