--- a/MyStock/Templates/EntityListPageTemplate.xaml
+++ b/MyStock/Templates/EntityListPageTemplate.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:interactivity="http://schemas.microsoft.com/xaml/behaviors"
              xmlns:langAsset="clr-namespace:MyStock.Application.Assets.Lang;assembly=MyStock.Application"
-             xmlns:local="clr-namespace:MyStock.Templates"
              xmlns:materialDesign="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              d:DesignHeight="450"
@@ -33,8 +33,13 @@
                           CanUserDeleteRows="False"
                           Foreground="{DynamicResource MaterialDesignBody}"
                           ItemsSource="{Binding Collection}"
-                          SelectedItem="{Binding SelectedItem}" />
-
+                          SelectedItem="{Binding SelectedItem}">
+                    <interactivity:Interaction.Triggers>
+                        <interactivity:EventTrigger EventName="MouseDoubleClick">
+                            <interactivity:InvokeCommandAction Command="{Binding Open}" />
+                        </interactivity:EventTrigger>
+                    </interactivity:Interaction.Triggers>
+                </DataGrid>
                 <Button Margin="0,0,10,10"
                         HorizontalAlignment="Right"
                         VerticalAlignment="Bottom"
