--- a/MyStock/Pages/Sale/SalesPage.xaml
+++ b/MyStock/Pages/Sale/SalesPage.xaml
@@ -1,6 +1,8 @@
 ﻿<pages:EntityPage x:Class="MyStock.Pages.Sale.SalesPage"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                  xmlns:convertors="clr-namespace:MyStock.Converters"
+                  xmlns:customerControls="clr-namespace:MyStock.Pages.Customers"
                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                   xmlns:langAsset="clr-namespace:MyStock.Application.Assets.Lang;assembly=MyStock.Application"
@@ -8,11 +10,115 @@
                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                   xmlns:pages="clr-namespace:MyStock.Pages"
                   xmlns:viewModel="clr-namespace:MyStock.Application.Sale;assembly=MyStock.Application"
-                  MinWidth="400"
-                  MinHeight="400"
+                  MinWidth="1000"
+                  MinHeight="800"
                   d:DesignHeight="550"
-                  d:DesignWidth="650"
+                  d:DesignWidth="900"
                   x:TypeArguments="viewModel:SalesViewModel"
+                  Foreground="{DynamicResource MaterialDesignBody}"
                   mc:Ignorable="d">
-    <Grid />
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <convertors:NumberToCurrencyConverter x:Key="NumberToCurrencyConverter" />
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Card.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.CheckBox.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Flipper.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Popupbox.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
+        </Grid.RowDefinitions>
+        <materialDesign:ColorZone Padding="20,10" Mode="PrimaryMid">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <TextBlock d:Text="New Invoice"
+                           Style="{StaticResource MaterialDesignHeadline5TextBlock}"
+                           Text="{Binding Description, Mode=OneWay}" />
+                <Button Grid.Column="2"
+                        HorizontalAlignment="Right"
+                        Command="{Binding Close}"
+                        Style="{StaticResource MaterialDesignIconForegroundButton}">
+                    <materialDesign:PackIcon Kind="Close" />
+                </Button>
+            </Grid>
+        </materialDesign:ColorZone>
+        <Grid Grid.Row="1"
+              MinHeight="150"
+              Margin="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*" />
+                <ColumnDefinition Width="3*" />
+                <ColumnDefinition Width="2*" />
+            </Grid.ColumnDefinitions>
+            <materialDesign:Card Margin="0,0,10,0">
+                <StackPanel Margin="20,10">
+                    <customerControls:CustomerFullTextSearch Margin="0,3,0,10" DataContext="{Binding CustomerSearchViewModel}" />
+
+                    <TextBox Grid.Row="1"
+                             Margin="0,10"
+                             materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Description}"
+                             materialDesign:TextFieldAssist.HasClearButton="True"
+                             Style="{StaticResource FloatingHintTextBox}"
+                             Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" />
+                </StackPanel>
+            </materialDesign:Card>
+            <materialDesign:Card Grid.Column="1" Margin="0,0,10,0">
+                <StackPanel Margin="20,10">
+                    <DatePicker Margin="0,10"
+                                materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Date}"
+                                materialDesign:TextFieldAssist.HasClearButton="True"
+                                SelectedDate="{Binding Date}"
+                                Style="{StaticResource MaterialDesignFloatingHintDatePicker}" />
+                    <TextBox Margin="0,10"
+                             materialDesign:HintAssist.Hint="{x:Static langAsset:Translations.Discount}"
+                             materialDesign:TextFieldAssist.HasClearButton="True"
+                             materialDesign:TextFieldAssist.PrefixText="$"
+                             Style="{StaticResource FloatingHintTextBox}"
+                             Text="{Binding Discount}" />
+                </StackPanel>
+            </materialDesign:Card>
+            <materialDesign:Card Grid.Column="2">
+                <StackPanel Margin="20,10">
+                    <TextBlock d:Text="Check"
+                               FontSize="18"
+                               Text="{x:Static langAsset:Translations.Check}" />
+                    <Grid Margin="0,15,0,5">
+                        <TextBlock HorizontalAlignment="Left"
+                                   d:Text="Total"
+                                   Text="{x:Static langAsset:Translations.Sum}" />
+                        <TextBlock HorizontalAlignment="Right"
+                                   d:Text="$500"
+                                   Text="{Binding TotalPrice, Converter={StaticResource NumberToCurrencyConverter}}" />
+                    </Grid>
+                    <Grid Margin="0,5">
+                        <TextBlock HorizontalAlignment="Left"
+                                   d:Text="Discount"
+                                   Text="{x:Static langAsset:Translations.Discount}" />
+
+                        <TextBlock HorizontalAlignment="Right"
+                                   d:Text="$50"
+                                   Text="{Binding Discount, Converter={StaticResource NumberToCurrencyConverter}}" />
+                    </Grid>
+                    <Grid Margin="0,10,0,5" TextBlock.FontSize="15">
+                        <TextBlock HorizontalAlignment="Left"
+                                   d:Text="Total to pay"
+                                   Text="{x:Static langAsset:Translations.TotalToPay}" />
+                        <TextBlock HorizontalAlignment="Right"
+                                   d:Text="$450.00"
+                                   Text="{Binding Balance, Converter={StaticResource NumberToCurrencyConverter}}" />
+                    </Grid>
+                </StackPanel>
+            </materialDesign:Card>
+        </Grid>
+    </Grid>
 </pages:EntityPage>
